--- a/UIElements/Base.lproj/Main.storyboard
+++ b/UIElements/Base.lproj/Main.storyboard
@@ -69,6 +69,19 @@
                                             <action selector="changeDate:" destination="BYZ-38-t0r" eventType="valueChanged" id="QpW-QQ-DWM"/>
                                         </connections>
                                     </datePicker>
+                                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="XEA-ra-eCg">
+                                        <rect key="frame" x="253" y="789" width="51" height="31"/>
+                                        <color key="thumbTintColor" systemColor="systemCyanColor"/>
+                                        <connections>
+                                            <action selector="switchAction:" destination="BYZ-38-t0r" eventType="valueChanged" id="ylL-S1-HGd"/>
+                                        </connections>
+                                    </switch>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hide elements" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YUX-Vg-dEs">
+                                        <rect key="frame" x="42.999999999999993" y="789" width="109.33333333333331" height="31"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
                                 <constraints>
                                     <constraint firstItem="8Ax-fv-Chj" firstAttribute="trailing" secondItem="JaI-kA-VKh" secondAttribute="trailing" id="1li-iV-cjX"/>
@@ -84,18 +97,25 @@
                                     <constraint firstAttribute="trailing" secondItem="XyT-Mf-tUE" secondAttribute="trailing" constant="19" id="Q63-bU-zvg"/>
                                     <constraint firstAttribute="trailing" secondItem="8Ax-fv-Chj" secondAttribute="trailing" constant="84" id="S3d-r2-CFb"/>
                                     <constraint firstItem="8Ax-fv-Chj" firstAttribute="leading" secondItem="JaI-kA-VKh" secondAttribute="leading" id="auR-dY-0QW"/>
+                                    <constraint firstAttribute="trailing" secondItem="XEA-ra-eCg" secondAttribute="trailing" constant="65" id="cnz-xa-H5o"/>
                                     <constraint firstItem="XyT-Mf-tUE" firstAttribute="leading" secondItem="wTl-d5-fcf" secondAttribute="leading" constant="19" id="dbf-R2-QGM"/>
+                                    <constraint firstAttribute="bottom" secondItem="XEA-ra-eCg" secondAttribute="bottom" constant="128" id="fFb-fV-Mgk"/>
                                     <constraint firstItem="8Ax-fv-Chj" firstAttribute="top" secondItem="KNR-gd-let" secondAttribute="bottom" constant="50" id="hZs-TU-FAj"/>
                                     <constraint firstItem="KNR-gd-let" firstAttribute="leading" secondItem="wTl-d5-fcf" secondAttribute="leadingMargin" id="iDK-6R-TwO"/>
+                                    <constraint firstItem="YUX-Vg-dEs" firstAttribute="top" secondItem="XyT-Mf-tUE" secondAttribute="bottom" constant="45" id="iF6-9Q-eAQ"/>
+                                    <constraint firstItem="XEA-ra-eCg" firstAttribute="top" secondItem="XyT-Mf-tUE" secondAttribute="bottom" constant="45" id="iKa-bw-rtb"/>
                                     <constraint firstItem="JaI-kA-VKh" firstAttribute="leading" secondItem="WXX-OM-PsC" secondAttribute="leading" id="ksx-oi-8kh"/>
+                                    <constraint firstItem="YUX-Vg-dEs" firstAttribute="leading" secondItem="wTl-d5-fcf" secondAttribute="leading" constant="43" id="llh-eg-sY2"/>
                                     <constraint firstItem="KNR-gd-let" firstAttribute="top" secondItem="atJ-8f-GUW" secondAttribute="bottom" constant="41" id="mUx-9u-z5O"/>
+                                    <constraint firstAttribute="bottom" secondItem="YUX-Vg-dEs" secondAttribute="bottom" constant="128" id="njg-eq-vuq"/>
                                     <constraint firstAttribute="bottom" secondItem="XyT-Mf-tUE" secondAttribute="bottom" constant="204" id="vLb-YP-Jq4"/>
                                     <constraint firstItem="8Ax-fv-Chj" firstAttribute="leading" secondItem="wTl-d5-fcf" secondAttribute="leading" constant="84" id="x6o-J7-1ec"/>
+                                    <constraint firstItem="XEA-ra-eCg" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="YUX-Vg-dEs" secondAttribute="trailing" constant="8" symbolic="YES" id="yUp-YU-Oe4"/>
                                 </constraints>
                             </scrollView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemGreenColor"/>
+                        <color key="backgroundColor" red="0.45138680930000002" green="0.99309605359999997" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="wTl-d5-fcf" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" constant="-41" id="Gmf-9n-y4B"/>
                             <constraint firstItem="wTl-d5-fcf" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="g7i-EN-iZI"/>
@@ -107,9 +127,11 @@
                     <size key="freeformSize" width="393" height="1000"/>
                     <connections>
                         <outlet property="datePicker" destination="XyT-Mf-tUE" id="VJc-o7-3jn"/>
+                        <outlet property="doneButton" destination="WXX-OM-PsC" id="PN8-s2-Fk5"/>
                         <outlet property="label" destination="KNR-gd-let" id="uHn-yc-vqh"/>
                         <outlet property="segmentedControl" destination="atJ-8f-GUW" id="hV6-VV-IWY"/>
                         <outlet property="slider" destination="8Ax-fv-Chj" id="ccT-qa-PnD"/>
+                        <outlet property="switchLabel" destination="YUX-Vg-dEs" id="0pb-qj-mrg"/>
                         <outlet property="textField" destination="JaI-kA-VKh" id="SeN-wj-rND"/>
                     </connections>
                 </viewController>
@@ -119,8 +141,8 @@
         </scene>
     </scenes>
     <resources>
-        <systemColor name="systemGreenColor">
-            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <systemColor name="systemCyanColor">
+            <color red="0.19607843137254902" green="0.67843137254901964" blue="0.90196078431372551" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
